FIx bug with scrollbar size

--- a/assets/stylesheet/app/editionPage/panel.less
+++ b/assets/stylesheet/app/editionPage/panel.less
@@ -18,7 +18,7 @@
     .slimScrollRail {
         background : #555 !important;
         opacity : 0.8 !important;
-        height: 88% !important;
+        height: 89% !important;
     }
 
     .slimScrollBar {
