--- a/assets/stylesheet/components/scrollbar.less
+++ b/assets/stylesheet/components/scrollbar.less
@@ -16,7 +16,8 @@
 
 #formPanel {
     .slimScrollRail {
-        height: 90% !important
+        height : 90% !important;
+        opacity: 1!important;
     }
 }
 
